-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.1.0
Steps to reproduce the issue:
1. Enter invalid keystore password -> "Failed to run keytool dialog" is shown.
Expected outcome:
- Password prompt is shown again after invalid password.
Actual outcome:
- Qt Creator restart is required to get the password prompt displayed again.
| For Gerrit Dashboard: QTCREATORBUG-17317 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 181255,2 | Android: Fix keytool result handling | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |