Android: Fix keytool result handling

keytool return code != 0 if the password is incorrect.

Task-number: QTCREATORBUG-17317
Change-Id: I248b4a687ef48a849d42a70940009738d29a609c
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Vikas Pachdha <vikas.pachdha@qt.io>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>